appnews/src/main/java/com/example/appnews/web/errors/ErrorCreateNews.java
package com.example.appnews.web.errors;

public class ErrorCreateNews {
}
